--- a/styles/main.css
+++ b/styles/main.css
@@ -57,3 +57,46 @@
     font-weight: bold;
     text-align: center;
   }
+
+ /*Trabajo de Monica a partir de aqui*/
+
+.whoiswho {
+    background-color: var(--white);
+    border: 2px solid red;
+    display: flex;
+    flex-direction: column;
+    padding-top: 30px;
+}
+.complete-person {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 30px;
+}
+.complete-person p {
+    text-align: center;
+    line-height: 1.5;
+    color: #54585a;
+}
+.whoiswho h2 {
+    font-family: 'Rubik', Arial, Helvetica, sans-serif;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 1.88;
+    text-align: center;
+    color: var(--blue-green);
+}
+.img-person {
+    object-fit: cover;
+    width: 180px;
+    height: 180px;
+    border: 5px solid var(--cool-grey);
+    border-radius: 4px;
+}
+.whoiswho h4 {
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    line-height: 2.25;
+    text-align: center;
+    margin-top: 15px;
+}
