--- a/styles/main.css
+++ b/styles/main.css
@@ -63,19 +63,40 @@
     background-position:center;
     height: 200px;
     width: 100vw;
+    text-align: center;
+   
+   
+    
 
    
 }
-
-.texto-hero{
+.Caja-hero{
     background-color: var(--white);
-    width: 204px;
-    position: relative;
-    padding: 2px;
-    top: 184px;
-    left: 58px; 
-    font-weight: bold;
+    display: inline-block;
     text-align: center;
+    margin-top: 175px;
+    padding:10px 10px 20px 10px ;
+    
+    
+ 
+    
+}
+.texto-hero{
+    text-align: center;
+    width: 280px;
+    font-size: 20px;
+    font-weight:bold ;
+    line-height: 1.1;
+    font-family: "Open-sans";
+    
+    
+    
+    
+    
+    
+    
+     
+    
   }
 
  /*Trabajo de Monica a partir de aqui*/
@@ -138,13 +159,14 @@
 
  .caja{
     position: relative;
-    top:3500px;
+    bottom:0px;
 
  }
   .nombre-final{
     color: var(--cool-grey);
     position: relative;
     margin-bottom: 15px;
+    margin-top: 5px; 
     text-align: center;
    
     
@@ -161,11 +183,13 @@
     text-decoration: none;
     font-size: 14px;
     margin-bottom: 5px;
+    margin-top: 5px;
     
   }
 
   .logo{
    margin-top:10px;
-   width:115.9px ;
-   height: 45px;
+   width:105.9px ;
+   margin-bottom: 10px;
+   
   }
