esto no funciona

--- a/styles/main.css
+++ b/styles/main.css
@@ -104,8 +104,8 @@
     background-color: var(--white);
     display: inline-block;
     text-align: center;
-    margin-top: 175px;
-    padding:10px 10px 20px 10px ;
+    margin-top: 156px;
+    padding:10px 10px 10px 10px ;
     
     
  
@@ -118,6 +118,7 @@
     font-weight:bold ;
     line-height: 1.1;
     font-family: "Open-sans";
+    font-weight: 600;
     
     
     
@@ -197,23 +198,33 @@
     margin-bottom: 15px;
     margin-top: 5px; 
     text-align: center;
+    font-family: "Open sans";
+    font-weight: normal;
+    gap: 5px;
    
     
   }
 
-  .enlaces-final{
+  .enlaces-final:hover{
     color: #54585a;
     margin: 5px;
     
   }
-  
+
+  .enlace1 ,.enlace2 , .enlace3 :active:link:visited:hover{
+    color:#54585a
+  }
+  .enlace3:visited{
+    color:#54585a
+  }
   .enlace1 ,.enlace2 , .enlace3 {
     display: inline-block;
     text-decoration: none;
     font-size: 14px;
     margin-bottom: 5px;
     margin-top: 5px;
-    
+    font-family:"Open sans";
+    font-weight: 600;
   }
 
   .logo{
