--- a/styles/main.css
+++ b/styles/main.css
@@ -119,7 +119,7 @@
     background-color: var(--white);
     display: inline-block;
     text-align: center;
-    margin-top: 31gi0px;
+    margin-top: 310px;
     padding:10px 10px 10px 10px ;
     
     
