--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -87,7 +87,6 @@ table {
 }
 .h1{
   width: 100%;
-  height: 60px;
   text-align: center;
   opacity: 0.95;
   background-color: var(--blue-green);
@@ -126,7 +125,7 @@ table {
     font-family: 'Rubik', Arial, Helvetica, sans-serif;
     font-weight: 500;
     font-size: 24px;
-    line-height: 1.88;
+    line-height: 24px;
     text-align: center;
     color: var(--aqua);
     margin-top: 60px;
@@ -336,3 +335,5 @@ table {
   #Equipo , #Quienes-somos {
     scroll-margin-top: 120px; 
   }
+
+  /* @media 480px*/
