--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -62,7 +62,6 @@ table {
 
 /* FIN DE LA HOJA DE RESET*/
 
-*{}
 
 :root {
     --blue-green: #099d8d;
@@ -133,7 +132,7 @@ table {
     margin-top: 60px;
 }
 .team p {
-    font-family: 'Open-sans';
+    font-family: 'Open Sans', sans-serif;
     font-size: 16px;
     text-align: center;
     line-height: 24px;
@@ -158,7 +157,7 @@ table {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    font-family: 'Open-sans';
+    font-family: 'Open Sans', sans-serif;
     width: 100%;
     line-height: 35px;
     padding-top: 30px;
@@ -207,7 +206,7 @@ table {
     font-size: 20px;
     font-weight:bold ;
     line-height: 1.1;
-    font-family: "Open-sans";
+    font-family: 'Open Sans', sans-serif;
     font-weight: 600;
     
     
@@ -238,6 +237,7 @@ table {
     text-align: center;
     line-height: 1.5;
     color: #54585a;
+    font-family: 'Open Sans', sans-serif;
 }
 .whoiswho h2 {
     font-family: 'Rubik', Arial, Helvetica, sans-serif;
@@ -255,7 +255,7 @@ table {
     border-radius: 4px;
 }
 .whoiswho h4 {
-    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-size: 20px;
     line-height: 2.25;
     text-align: center;
@@ -298,7 +298,7 @@ table {
     margin-bottom: 15px;
     margin-top: 30px; 
     text-align: center;
-    font-family: "Open sans";
+    font-family: 'Open Sans', sans-serif;
     font-weight: normal;
     gap: 5px;
    
@@ -323,7 +323,7 @@ table {
     font-size: 14px;
     margin-bottom: 5px;
     margin-top: 5px;
-    font-family:"Open sans";
+    font-family: 'Open Sans', sans-serif;
     font-weight: 600;
   }
 
