--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -327,3 +327,12 @@ table {
   #Equipo , #Quienes-somos {
     scroll-margin-top: 120px; 
   }
+
+  @media screen and (min-width 768px){
+    .strengths-weaknesses{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+    
+}
