CSS partials created

--- a/src/scss/components/_links.scss
+++ b/src/scss/components/_links.scss
@@ -1,3 +1,5 @@
+/*
+
 .link__adalab:hover {
   background-color: #099d8d;
   color: #fff;
@@ -7,3 +9,4 @@
   background-color: #CCC;
   color: #000;
 }
+*/
