--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,8 +1,46 @@
-.page__footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100vw;
-  padding: 1rem;
-  color: $color-secondary;
+/* FOOTER*/
+
+.linea {
+  margin-bottom: 5px;
+}
+
+.footer {
+  text-align: center;
+  height: 250px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nombre-final {
+  color: var(--cool-grey);
+  position: relative;
+  margin-bottom: 20px;
+  margin-top: 30px;
+  text-align: center;
+  font-family: "Open Sans", sans-serif;
+  font-weight: normal;
+  gap: 5px;
+  font-size: 14px;
+}
+.enlace1,
+.enlace2,
+.enlace3 {
+  display: inline-block;
+  text-decoration: none;
+  box-shadow: none;
+  color: var(--gun-metal);
+  font-size: 14px;
+  margin-bottom: 5px;
+  margin-top: 5px;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 600;
+}
+
+.logo {
+  margin-top: 10px;
+  height: 45px;
+  width: 115.9px;
+  margin-bottom: 45px;
 }
