who is who mediaquerie version tablet

--- a/src/html/partials/who_is_who.html
+++ b/src/html/partials/who_is_who.html
@@ -1,10 +1,10 @@
 <section class="whoiswho">
     <h2 id="Quienes-somos" class="quienes-somos">Quiénes somos</h2>
-    <article class="complete-person">
+    <article class="complete-person person-left">
         <img class="img-person" src="./assets/images/cabra.jpeg" alt="">
         <div>
-            <h4>Laura García Cuello</h4>
-            <p class="parrafo">Entusiasta por el cambio y en la búsqueda de aquello que me haga feliz. Vengo de
+            <h4 class="whoiswho__title--left">Laura García Cuello</h4>
+            <p class="whoiswho__text">Entusiasta por el cambio y en la búsqueda de aquello que me haga feliz. Vengo de
                 la rama sanitatia y voy directa a la rama de la programación. Descubriendo este apasionante
                 mundo code que se está convirtiendo en mi nueva vocación. Ilusionada con este nuevo comienzo.
             </p>
@@ -18,11 +18,12 @@
             </nav>
         </div>
     </article>
-    <article class="complete-person">
+    <article class="complete-person person-right">
         <img class="img-person" src="./assets/images/cabra.jpeg" alt="">
         <div>
-            <h4>Bella García Villegas</h4>
-            <p>Madre de 2 niñas que se ha ido reinventando a sí misma. Cuando con 37 años sabes que estas en un
+            <h4 class="whoiswho__title--right">Bella García Villegas</h4>
+            <p class="whoiswho__text">Madre de 2 niñas que se ha ido reinventando a sí misma. Cuando con 37 años sabes
+                que estas en un
                 sector y en una empresa que no te puede ofrecer más, tienes 2 opciones: disfrutar la estabilidad
                 que eso te proporciona o decidir que ese no es tu camino y buscar otro que te ofrezca un camino
                 ilimitado de conocimiento y a su vez reconocimiento laboral. Es el momento del cambio,
@@ -37,13 +38,14 @@
             </nav>
         </div>
     </article>
-    <article class="complete-person">
+    <article class="complete-person person-left">
         <img class="img-person" src="./assets/images/cabra.jpeg" alt="">
         <div>
-            <h4>Mónica Hidalgo Martín</h4>
-            <p>Culo inquieto por naturaleza con la constante necesidad de cambio y evolución. Esto me ha llevado
-                a vivir varios años en diferentes países y dedicarme laboralmente a varias disciplinas. Desde
-                locutora de radio hasta profesora de inglés. Como ves mi rama main tiene bastantes branches. Me
+            <h4 class="whoiswho__title--left">Mónica Hidalgo Martín</h4>
+            <p class="whoiswho__text">Culo inquieto por naturaleza con constante necesidad de mejorar y evolucionar.
+                Esto me ha llevado
+                a vivir en diferentes países y a dedicarme a varias disciplinas. Desde
+                locutora de radio hasta profesora de inglés. Me
                 atrae cualquier cosa que tiene que ver con la creatividad y la lógica. Ahora la vida me ha
                 llevado a estudiar programación web y se ha convertido en mi nueva pasión. ¿Las otras? La
                 montaña, los animales y las fiestas de cumpleaños con disfraces.</p>
@@ -58,11 +60,12 @@
             </nav>
         </div>
     </article>
-    <article class="complete-person">
+    <article class="complete-person person-right">
         <img class="img-person" src="./assets/images/cabra.jpeg" alt="">
         <div>
-            <h4>Bárbara García Bolaños</h4>
-            <p>Curiosa e inquieta. A lo largo de mi vida he tocado muchos palos desde ciencias de la antigüedad
+            <h4 class="whoiswho__title--right">Bárbara García Bolaños</h4>
+            <p class="whoiswho__text">Curiosa e inquieta. A lo largo de mi vida he tocado muchos palos desde ciencias de
+                la antigüedad
                 hasta realización de proyectos. Puedo transformarte en un zombie viviente ,gracias a la magia
                 del maquillaje, o dirigirte un documental de tu vida. Ahora estoy luchando para poder
                 programarte tu próxima página web. ¿ Y de mi que puedo contarte? Estoy en contra del especismo y
