--- a/src/scss/layout/_who_is_who.scss
+++ b/src/scss/layout/_who_is_who.scss
@@ -69,7 +69,7 @@
 @media all and (min-width: 768px) {
   .complete-person {
     flex-direction: row;
-    margin: 20px 50px 20px 50px;
+    margin: 20px 50px;
   }
   .whoiswho__title--left {
     text-align-last: left;
@@ -79,6 +79,7 @@
   }
   .whoiswho__text {
     text-align: left;
+    width: 445px;
   }
   .person-right .whoiswho__text {
     text-align: right;
@@ -110,5 +111,18 @@
   .img-person {
     width: 207px;
     height: 207px;
+  }
+}
+@media all and (min-width: 1200px) {
+  .quienes-somos {
+    margin-bottom: 30px;
+    margin-top: 20px;
+  }
+  .complete-person {
+    margin: 20px 140px;
+  }
+  .img-person {
+    width: 278px;
+    height: 278px;
   }
 }
