--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -4,7 +4,7 @@
   background-position: center;
   background-size: cover;
   top: 0px;
-  height: 350px;
+  height: 421px;
   text-align: center;
   display: flex;
   align-items: center;
@@ -20,7 +20,22 @@
   font-family: "Open Sans", sans-serif;
   font-weight: 600;
   background-color: var(--white);
-  text-align: center;
-  margin-top: 350px;
-  padding: 10px 10px 10px 10px;
+  text-align: left;
+  margin-top: 421px;
+  padding: 14px 15px 15px 16px;
+  box-sizing: border-box;
+}
+
+@media all and (min-width: 768px) {
+  .texto-hero {
+    background: rgba(255, 255, 255, 0.8);
+    width: 441px;
+    height: 80px;
+    margin-left: 46px;
+    padding: 15px, 30px, 15px, 30px;
+  }
+  .hero {
+    justify-content: left;
+    align-items: flex-end;
+  }
 }
