--- a/src/html/partials/who_is_who.html
+++ b/src/html/partials/who_is_who.html
@@ -39,7 +39,7 @@
         </div>
     </article>
     <article class="complete-person person-left">
-        <img class="img-person" src="./assets/images/cabra.jpeg" alt="">
+        <img class="img-person" src="./assets/images/monica.png" alt="">
         <div>
             <h4 class="whoiswho__title--left">Mónica Hidalgo Martín</h4>
             <p class="whoiswho__text">Culo inquieto por naturaleza con constante necesidad de mejorar y evolucionar.
