finish hero-footer table-web provisional contact

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
     <small class="nombre-final">Leap of faith © 2022</small>
-    <nav>
+    <nav class="nav">
         <ul class="enlaces-final">
             <li><a class="enlace1" href="./index.html#Equipo">Equipo</a></li>
             <li><a class="enlace2" href="./index.html#Quienes-somos">Quiénes somos</a></li>
