--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -32,10 +32,24 @@
     width: 441px;
     height: 80px;
     margin-left: 46px;
-    padding: 15px, 30px, 15px, 30px;
+    padding: 35px 30px 15px 30px;
+    text-align: center;
   }
   .hero {
     justify-content: left;
     align-items: flex-end;
+  }
+}
+
+@media all and (min-width: 1200px) {
+  .texto-hero {
+    margin-left: 138px;
+    width: 574px;
+    height: 90px;
+    padding: 35px 30px 15px 30px;
+    text-align: center;
+  }
+  .hero {
+    height: 550px;
   }
 }
