Añadidas las fotos de las integrantes del equipo

--- a/src/html/partials/who_is_who.html
+++ b/src/html/partials/who_is_who.html
@@ -1,7 +1,7 @@
 <section class="whoiswho">
     <h2 id="Quienes-somos" class="quienes-somos">Quiénes somos</h2>
     <article class="complete-person person-left">
-        <img class="img-person" src="./assets/images/cabra.jpeg" alt="">
+        <img class="img-person" src="./assets/images/laura.png" alt="">
         <div>
             <h4 class="whoiswho__title--left">Laura García Cuello</h4>
             <p class="whoiswho__text">Entusiasta por el cambio y en la búsqueda de aquello que me haga feliz. Vengo de
@@ -19,7 +19,7 @@
         </div>
     </article>
     <article class="complete-person person-right">
-        <img class="img-person" src="./assets/images/cabra.jpeg" alt="">
+        <img class="img-person" src="./assets/images/bella.png" alt="">
         <div>
             <h4 class="whoiswho__title--right">Bella García Villegas</h4>
             <p class="whoiswho__text">Madre de 2 niñas que se ha ido reinventando a sí misma. Cuando con 37 años sabes
@@ -61,7 +61,7 @@
         </div>
     </article>
     <article class="complete-person person-right">
-        <img class="img-person" src="./assets/images/cabra.jpeg" alt="">
+        <img class="img-person" src="./assets/images/barbara.png" alt="">
         <div>
             <h4 class="whoiswho__title--right">Bárbara García Bolaños</h4>
             <p class="whoiswho__text">Curiosa e inquieta. A lo largo de mi vida he tocado muchos palos desde ciencias de
